Added Ricoh employment

--- a/resume.tex
+++ b/resume.tex
@@ -60,7 +60,7 @@
 %%% Essentials
 \name{Mitchell}{Waibel}
 \address{18274 W. 58th Pl. \#40 Golden, Colorado 80403}
-\mobile{(303)590-8119} 
+\mobile{(303)590--8119} 
 %%% Social
 \email{mitchell.waibel@gmail.com}
 %\homepage{www.posquit0.com}
@@ -75,14 +75,14 @@
 %     Content
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Make a footer for CV with three arguments(<left>, <center>, <right>)
-\makecvfooter
+\makecvfooter%
   {\today}
   {Mitchell Waibel~~~·~~~Résumé}
   {}
 
 \begin{document}
 %%% Make a header for CV with personal data
-\makecvheader
+\makecvheader%
 
 %%% Import contents
 \begin{minipage}[t]{0.32\textwidth} 
