--- a/resume/coursework.tex
+++ b/resume/coursework.tex
@@ -1,9 +1,12 @@
 \cvsection{Coursework}
 \cvsubsection{Graduate}
 \begin{cvskills}
+\cvskill{}{Computer Vision}
+\cvskill{}{Simulation}
+\cvskill{}{Applied Algorithms}
+\cvskill{}{Theory of Computation}
 \cvskill{}{Advanced Computer Architecture}
 \cvskill{}{Game Theory and Networks}
-\cvskill{}{Theory of Computation}
 \end{cvskills}
 
 \cvsubsection{Undergraduate}
@@ -16,7 +19,7 @@
 \cvskill{}{Computer Graphics}
 \cvskill{}{Discrete Mathematics}
 \cvskill{}{Database Management}
-\cvskill{}{Computer Organization}
+%\cvskill{}{Computer Organization}
 \cvskill{}{Mobile Application Development}
-\cvskill{}{Game Development}
+%\cvskill{}{Game Development}
 \end{cvskills}
