--- a/resume/education.tex
+++ b/resume/education.tex
@@ -21,7 +21,7 @@
         \item {Graduated Cum Laude}
 %        \item {Coors Foundation Achievement Scholarship}
         \item {National Dean’s List - 4 Semesters}
-        \item {Honor Roll - 2 Semesters}
+%        \item {Honor Roll - 2 Semesters}
 %        \item {Member of Society of Physics Students}
       \end{cvitems}
     }
