--- a/resume/employment.tex
+++ b/resume/employment.tex
@@ -1,26 +1,41 @@
 \cvsection{Employment}
 \begin{cventries}
-  \cventry
+  \cventry%
+    {Imaging and Color Science Intern}
+    {Ricoh}
+    {Boulder, Colorado}
+    {May 2018 --- August 2018}
+    {%
+      \begin{cvitems}
+         \item Developed the backend software to capture images in real-time and
+               send it directly to the GPU (tested up to 3.6 GB/s).
+         \item Created the GUI to control the camera and paper drum to save
+               images of various size or stream them to the monitor in real-time.
+         \item Started looking into various ways to save 30 minutes of data in
+               long-term storage.
+      \end{cvitems}
+    }
+  \cventry%
     {Software Engineering Intern}
     {SEAKR Engineering}
     {Centennial, Colorado}
-    {May 2017 - August 2017}
-    {
+    {May 2017 --- August 2017}
+    {%
       \begin{cvitems}
-         \item Ported a proprietary software package from VxWorks to Linux. The software also moved
-               to a new architecture, which required more rewritten code.
+         \item Ported a proprietary software package from VxWorks to Linux. The software also
+               moved to a new architecture, which required more rewritten code.
          \item Installed PetaLinux on the flash memory of a MicroZed development board.
       \end{cvitems}
     }
-  \cventry
+  \cventry%
     {Warehouse Worker}
     {MasterCraft Truck Equipment, Inc.}
     {Englewood, Colorado}
-    {Summers, 2015 - 2016}
-    {
+    {Summers, 2015 --- 2016}
+    {%
       \begin{cvitems}
          \item Learned about small scale installation processes
-         \item Received and processed 2-3 shipments per day
+         \item Received and processed 2--3 shipments per day
          \item Delivered the finished vehicle to the customer
       \end{cvitems}
     }
