--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -5,7 +5,7 @@
  \cvskill{}{JavaScript, HTML5,}
  \cvskill{}{Android Application}
  \cvskill{Intermediate}{OpenGL, Mathematica,}
- \cvskill{}{MIPS Assembly}
+ \cvskill{}{MIPS Assembly, MatLab}
  \cvskill{Basic}{Arduino, PostgreSQL}
  \cvskill{}{Analog \& Digital Circuits,}
  \cvskill{}{LabView, SolidWorks}
