--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,46 +1,51 @@
 \cvsection{Team Project Experience}
 \begin{cventries}
-  \cventry
+  \cventry%
+    {OpenGL ES Developer}
+    {Mobile Application Development}
+    {}
+    {}
+    {%
+      We work through the entire process of creating an Android application from
+      scratch using proper design with application fragments and activities. Our
+      app is a Dungeons and Dragons character sheet which allows the user to
+      keep track of their players stats. I focussed on the dice-roller that the
+      player can use to roll realistic-looking dice.
+    }
+  \cventry%
     {Team Member}
     {Theory of Computation}
     {}
     {}
-    {
-      We spent three weeks developing and coding a LISP program that takes in input, potentially a
-      regular expression, and converts it to a Discrete Event System and which can then be solved
-      with a route through the Discrete Event System using graph traversal methods.
+    {%
+      We spent three weeks developing and coding a LISP program that takes in
+      input, potentially a regular expression, and converts it to a Discrete
+      Event System and which can then be solved with a route through the
+      Discrete Event System using graph traversal methods.
     }
-%  \cventry
-%    {OpenGL ES Developer}
-%    {Mobile Application Development}
-%    {}
-%    {}
-%    {
-%      We work through the entire process of creating an Android application from scratch using
-%      proper design with fragments and activities. Our app is a Dungeons and Dragons character sheet
-%      which gets rid of a lot of the confusion for a beginner player.
-%    }
-  \cventry
+  \cventry%
     {C++ Programmer}
     {Senior Design}
     {}
-    {August 2016 - May 2017}
-    {
-      Lightning creates atmospheric events in the ionosphere, called Elves, that can be observed at
-      the Pierre Auger Observatory in Argentina. I helped develop a set of modules to work with
-      existing modules that take weighted photon position data from a simulation of an Elve and
-      simulate what that would look like in the detectors at the observatory.
+    {August 2016 --- May 2017}
+    {%
+      Lightning creates atmospheric events in the ionosphere, called Elves, that
+      can be observed at the Pierre Auger Observatory in Argentina. I helped
+      develop a set of modules to work with existing modules that take weighted
+      photon position data from a simulation of an Elve and simulate what that
+      would look like in the detectors at the observatory.
     }
-  \cventry
-    {Student}
-    {Physics Field Session}
-    {}
-    {}
-    {
-      Six week long session where we learn hands on skills such as working precision machinery in a
-      shop, handling different types of vacuums, designing analog circuits, construction and
-      operation of lasers, and how to program in several different languages.
-    }
+  % \cventry%
+  %   {Student}
+  %   {Physics Field Session}
+  %   {}
+  %   {}
+  %   {%
+  %     Six week long session where we learn hands on skills such as working
+  %     precision machinery in a shop, handling different types of vacuums,
+  %     designing analog circuits, construction and operation of lasers, and how
+  %     to program in several different languages.
+  %   }
 %  \cventry
 %    {Lead Programmer}
 %    {EPICS II: Audio to Visual Interface}
