Completed updating for Fall 2018

--- a/resume.tex
+++ b/resume.tex
@@ -19,6 +19,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Themes: Awesome-CV
 \documentclass[11pt, letterpaper]{awesome-cv}
+\renewcommand{\baselinestretch}{1.1}
 
 %%% Override a directory location for fonts(default: 'fonts/')
 \fontdir[fonts/]
@@ -67,7 +68,7 @@
 \github{mdub555}
 \linkedin{mitchell-waibel}
 %%% Optionals
-\position{Graduate Student{\enskip\cdotp\enskip}Computer Science}
+\position{Alarm.com C-MAPP Fellow{\enskip\cdotp\enskip}Graduate Student{\enskip\cdotp\enskip}Computer Science}
 %\quote{``Make the change that you want to see in the world."}
 
 
@@ -77,7 +78,7 @@
 %%% Make a footer for CV with three arguments(<left>, <center>, <right>)
 \makecvfooter%
   {\today}
-  {Mitchell Waibel~~~·~~~Résumé}
+  {Mitchell Waibel{\enskip\cdotp\enskip}Résumé}
   {}
 
 \begin{document}
