--- a/resume/coursework.tex
+++ b/resume/coursework.tex
@@ -19,7 +19,7 @@
 \cvskill{}{Computer Graphics}
 \cvskill{}{Discrete Mathematics}
 \cvskill{}{Database Management}
-%\cvskill{}{Computer Organization}
+\cvskill{}{Computer Organization}
 \cvskill{}{Mobile Application Development}
-%\cvskill{}{Game Development}
+\cvskill{}{Game Development}
 \end{cvskills}
