--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -4,25 +4,25 @@
     {OpenGL ES Developer}
     {Mobile Application Development}
     {}
-    {}
+    {Jan 2018 --- May 2018}
     {%
-      We work through the entire process of creating an Android application from
+      We worked through the entire process of creating an Android application from
       scratch using proper design with application fragments and activities. Our
       app is a Dungeons and Dragons character sheet which allows the user to
-      keep track of their players stats. I focussed on the dice-roller that the
-      player can use to roll realistic-looking dice.
+      keep track of their players stats. I focused on the dice-roller that the
+      player can use to roll realistic-looking dice using OpenGL ES.\@
     }
-  \cventry%
-    {Team Member}
-    {Theory of Computation}
-    {}
-    {}
-    {%
-      We spent three weeks developing and coding a LISP program that takes in
-      input, potentially a regular expression, and converts it to a Discrete
-      Event System and which can then be solved with a route through the
-      Discrete Event System using graph traversal methods.
-    }
+  % \cventry%
+  %   {Team Member}
+  %   {Theory of Computation}
+  %   {}
+  %   {}
+  %   {%
+  %     We spent three weeks developing and coding a LISP program that takes in
+  %     input, potentially a regular expression, and converts it to a Discrete
+  %     Event System and which can then be solved with a route through the
+  %     Discrete Event System using graph traversal methods.
+  %   }
   \cventry%
     {C++ Programmer}
     {Senior Design}
