--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -1,17 +1,23 @@
 \cvsection{Technical Skills}
 \begin{cvskills}
  \cvskill{Advanced}{C++, C, Linux Terminal,}
- \cvskill{}{Java, Python, \LaTeX, LISP, }
- \cvskill{}{JavaScript, HTML5,}
+ \cvskill{}{Python, Java, \LaTeX}
+ \cvskill{Intermediate}{OpenGL, MatLab,}
  \cvskill{}{Android Application}
- \cvskill{Intermediate}{OpenGL, Mathematica,}
- \cvskill{}{MIPS Assembly, MatLab}
- \cvskill{Basic}{Arduino, PostgreSQL}
- \cvskill{}{Analog \& Digital Circuits,}
- \cvskill{}{LabView, SolidWorks}
  \cvskill{General}{Public speaking,}
- \cvskill{}{technical writing,}
- \cvskill{}{independent research}
- \cvskill{Tools}{Microsoft Excel,}
- \cvskill{}{Word, and PowerPoint}
+ \cvskill{}{technical writing}
 \end{cvskills}
+%  \cvskill{Advanced}{C++, C, Linux Terminal,}
+%  \cvskill{}{Java, Python, \LaTeX, LISP, }
+%  \cvskill{}{JavaScript, HTML5,}
+%  \cvskill{}{Android Application}
+%  \cvskill{Intermediate}{OpenGL, Mathematica,}
+%  \cvskill{}{MIPS Assembly, MatLab}
+%  \cvskill{Basic}{Arduino, PostgreSQL}
+%  \cvskill{}{Analog \& Digital Circuits,}
+%  \cvskill{}{LabView, SolidWorks}
+%  \cvskill{General}{Public speaking,}
+%  \cvskill{}{technical writing,}
+%  \cvskill{}{independent research}
+%  \cvskill{Tools}{Microsoft Excel,}
+%  \cvskill{}{Word, and PowerPoint}
