--- a/resume/employment.tex
+++ b/resume/employment.tex
@@ -1,4 +1,5 @@
 \cvsection{Employment}
+\honortitlestyle{References upon request}
 \begin{cventries}
   \cventry%
     {Imaging and Color Science Intern}
@@ -7,12 +8,11 @@
     {May 2018 --- August 2018}
     {%
       \begin{cvitems}
-         \item Developed the backend software to capture images in real-time and
-               send it directly to the GPU (tested up to 3.6 GB/s).
-         \item Created the GUI to control the camera and paper drum to save
+         \item Developed the backend software to capture images in real-time
+               (tested up to 3.6 GB/s) and send it directly to the GPU using C++
+               and OpenGL.\@
+         \item Created a GUI in Qt Creator to control the camera and paper drum to save
                images of various size or stream them to the monitor in real-time.
-         \item Started looking into various ways to save 30 minutes of data in
-               long-term storage.
       \end{cvitems}
     }
   \cventry%
@@ -22,8 +22,9 @@
     {May 2017 --- August 2017}
     {%
       \begin{cvitems}
-         \item Ported a proprietary software package from VxWorks to Linux. The software also
-               moved to a new architecture, which required more rewritten code.
+         \item Ported a proprietary C++ software package from VxWorks to Linux.
+         The software also moved to a new architecture, which required more
+         rewritten code.
          \item Installed PetaLinux on the flash memory of a MicroZed development board.
       \end{cvitems}
     }
@@ -34,9 +35,9 @@
     {Summers, 2015 --- 2016}
     {%
       \begin{cvitems}
-         \item Learned about small scale installation processes
-         \item Received and processed 2--3 shipments per day
-         \item Delivered the finished vehicle to the customer
+         \item Learned about small scale installation processes.
+         \item Received and processed 2--3 large shipments per day.
+         \item Delivered the finished vehicle to the customer.
       \end{cvitems}
     }
 %  \cventry
