Fixed Ricoh's name typo

--- a/resume/employment.tex
+++ b/resume/employment.tex
@@ -3,7 +3,7 @@
 \begin{cventries}
   \cventry%
     {Imaging and Color Science Intern}
-    {Ricoh}
+    {Ricoh USA, Inc.}
     {Boulder, Colorado}
     {May 2018 --- August 2018}
     {%
